app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

.header{
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 20px 10px;

}
 .logo{
     color: #F15D1E;
     font-size: 45px;
     margin-left: 25px;
     text-decoration: none;
     font-family: "Guardian-EgypTT";
     font-style: italic;
 }

 .header-right {
    float: right;
   
 }

 .session-header {
     
     text-align: center;
     color: black;
     padding: 12px;
     text-decoration: none;
     font-size: 25px;
     line-height: 23px;
     border-radius: 5px;
 }

 .session-header:hover {

     background-color: #ddd
 }

 button.session-header{
         outline:none;


 }
.search-container{
        display: flex;
        flex-grow: 1;
        margin-left: 15px;
        width: 100%;
        
}
 .search-container input[type="text"]{
    outline: none;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 30px;
    padding-right: 300px;
    height: 40px;
    font-size: 20px;
    color: #222222;
    font-family: inherit;
    background-color: #e4e2e2ea;
    border-radius: 35px;
    width: 100%;
    margin-right: 15px;;
 }


.nav{
    margin-left: 15px;
}

 .nav ul{
     margin: 0;
     padding: 0;
     overflow: hidden;
     list-style-type: none;
     border-bottom: 1px solid #b4b4b4;
     
 }

 .nav li {
     float: left;
 }

  .nav a {
      text-decoration: none;
      display: block;
      padding: 14px 16px;
      font-size: 16px;
      color: rgb(58, 58, 56);

  }

  .nav li::after {
        
    content: '';
    display: block;
    margin: auto;
    height: 3px;
    width: 0px;
    background: rgb(75, 73, 73);
    transition: all 0.3s linear;
  }

  .nav li:hover:after {
      width: 79%;
  }

  .modal-background {
      position: fixed;
      top: 0;
      bottom: 0;
      right: 0;
      left: 0;
      background-color: #0000001A;
  }

  .modal-child {
      position: absolute;
      top: 50%;
      left: 50%;
      background-color:rgb(251, 253, 247);
      transform: translate(-50%, -50%);
      padding-left: 18px;
      padding-right: 18px;
      padding-bottom: 25px;
      border-radius: 10%;
      border: 0.5px solid rgb(88, 88, 88);

  }

  .close-x {
      position: absolute;
      top: -25px;
      right: -1px;
      cursor: pointer;
      color:rgb(179, 176, 176);
  }

  .user-form{
      padding-top: 0;
      margin-bottom: 20px;
      display: inline-block;
      margin-left: auto;
      margin-right: auto;


  }

  .user-form input[type="text"],
  .user-form input[type="password"] {
    margin-bottom: 10px;
    
    padding: 5px;
    border-radius: 30px;
    
  }

  .input-headers{
      display: block;
  }

.current-next-session{
    margin-left: 0;
    display: flex;
   align-items: center;
    }


.form-type{
    float: left;
    font-family: Graphik Webfont;

}

.form-next {
    float: right;
    margin-top: 10px;
    margin-left: 63px;

}

.signup-login-btn{
    background-color: rgb(253, 253, 253);
    border-radius: 24px;
    border: 2px solid rgb(22, 22, 22);
    padding: 10px;
    font-size: 13px;
    font-weight: bold;
    cursor: pointer;
    font-family: "Graphik Webfont";



}

.submit-button{
    margin-top: 15px;
    background: rgb(22, 22, 22);
    border: none;
    text-decoration: none;
    color: white;
    cursor: pointer;
    border-radius: 24px;
    font-weight: bold;
    padding-top: 11px;
    padding-bottom: 11px;
    padding-left: 60px;
    padding-right: 60px;
    text-align: center;
    font-family: "Graphik Webfont";

}

.guest-login-btn{
   margin-top: 15px;
   background: rgb(234, 234, 234);
   border: none;
   text-decoration: none;
   color: #090808;
   cursor: pointer;
   font-family: "Graphik Webfont";

   border-radius: 24px;
   font-weight: bold;
   padding-top: 11px;
   padding-bottom: 11px;
   padding-left: 60px;
   padding-right: 60px;
   text-align: center;
   border: .5px solid black;
cursor: pointer;
}

.search-form{
    display: flex;
    width: 100%;
}

.login-logout-btn{
    background: none;
    border: none;
    font-family: "Graphik Webfont";
    font-weight: bold;
    color:rgb(73, 73, 73);
    font-size: 18px;
    border-radius: 30px;
    padding: 10px;
    cursor: pointer;
     outline:none;
}

.login-logout-btn:hover {

    background-color: #ddd
}

.errors{
    color: red;
    list-style-type: none;
    padding: 0;

}

